tambah ke google apss

--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
               <strong>Terimakasih!</strong> Pesan anda sudah kami terima.
               <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
             </div>
-            <form name="wpu-contact-form">
+            <form name="portoFolio">
               <div class="mb-3">
                 <label for="name" class="form-label">Nama Lengkap</label>
                 <input type="text" class="form-control" id="name" aria-describedby="name" name="nama" />
@@ -309,8 +309,8 @@
     </script>
 
     <script>
-      const scriptURL = 'https://script.google.com/macros/s/AKfycbzjWwvjJihKz3-24SxEnHM5XFjNPgQd_dv3uD_fgjLSp_4AAXsC6IC4C_ECvWyLkGsuBg/exec';
-      const form = document.forms['wpu-contact-form'];
+      const scriptURL = 'https://script.google.com/macros/s/AKfycbzB2Lg_tLyI5roNoNtP9hQR1EKLTGpYG2D1c9vXxXQdZpUINz2fQeBuSIiYYhd57qk/exec';
+      const form = document.forms['portoFolio'];
       const btnKirim = document.querySelector('.btn-kirim');
       const btnLoading = document.querySelector('.btn-loading');
       const myAlert = document.querySelector('.my-alert');
